// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.js should render a <button> tag when using to prop 1`] = `

<button class="v-btn v-btn--router theme--light">
</button>

`;

exports[`VBtn.js should render an <a> tag when using href prop 1`] = `

<a href="http://www.google.com"
   class="v-btn theme--light"
>
  <div class="v-btn__content">
  </div>
</a>

`;

exports[`VBtn.js should render component and match snapshot 1`] = `

<button type="button"
        class="v-btn theme--light"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 1`] = `

<button type="button"
        class="v-btn theme--light green darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with color prop and match snapshot 2`] = `

<button type="button"
        class="v-btn v-btn--flat theme--light green--text text--darken-1"
>
  <div class="v-btn__content">
  </div>
</button>

`;

exports[`VBtn.js should render component with loader and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader theme--light"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <div class="v-progress-circular v-progress-circular--indeterminate"
         style="height: 26px; width: 26px;"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="21.666666666666664 21.666666666666664 43.33333333333333 43.33333333333333"
      >
        <circle fill="transparent"
                cx="43.33333333333333"
                cy="43.33333333333333"
                r="20"
                stroke-width="3.333333333333333"
                stroke-dasharray="125.664"
                stroke-dashoffset="125.66370614359172px"
                class="v-progress-circular__overlay"
        >
        </circle>
      </svg>
      <div class="v-progress-circular__info">
      </div>
    </div>
  </span>
</button>

`;

exports[`VBtn.js should render component with loader slot and match snapshot 1`] = `

<button type="button"
        class="v-btn v-btn--loader theme--light"
>
  <div class="v-btn__content">
  </div>
  <span class="v-btn__loading">
    <span>
      loader
    </span>
  </span>
</button>

`;

exports[`VBtn.js should render specified tag when using tag prop 1`] = `

<a class="v-btn theme--light">
  <div class="v-btn__content">
  </div>
</a>

`;
